# Graph-coursup

./: README.md  data.json  main.py  pyproject.toml  requirements.txt  schools.json
data/: schools.json  students.json
data/example2/: schools.json  students.json
data/example3/: schools.json  students.json
data/example4/: schools.json  students.json
src/: algorithms.py  cli_handler.py  data_loader.py  main.py  models.py  notebook.ipynb
src/graph_coursup/: __init__.py
tests/: test_algorithms.py  test_cli_handler.py  test_models.py
