[project]
name = "graph-coursup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yoann FRANCOIS", email = "121094049+yfrancois-iut@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "inquirerpy>=0.3.4",
]

[project.scripts]
graph-coursup = "graph_coursup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
